setting fixed window dimensions is ignored
Affected version
master, Wayland
Bug summary
Setting minimum and maximum xdg-toplevel sizes is ignored when toplevel size and window geometry differ.
Steps to reproduce
- checkout and build libdecoration on branch bug_minmax_size
- run the example via
LIBDECOR_PLUGIN_DIR=build/src/plugins/cairo/ ./build/demo/libdecor-demo
, the demo app sets the minimum and maximum toplevel size to the same value to achieve a fixed size window - try to resize horizontally and vertically via the mouse pointer on window/decoration edges
What happened
The toplevel hight jumps and seems to wrap around when resized via horizontal edges: mutter_minmax_resize
I suspect that this is happening because the toplevel height and the window geometry height are different. The width of the window is fixed, probably because toplevel width and window geometry width are equal. The client-side decorations are implemented via subsurfaces and the titlebar subsurface extends the original window size, i.e. the window geometry hight is toplevel height + titlebar height.
However, mutter seems to partially recognised that the window is supposed to be fixed, as it prevents it from maximising.
What did you expect to happen
The window should not be resizeable, keep a fixed size and hide any hints of reliability when hovering with the pointer of the resize edges.